fixed bugs with inputs

--- a/src/components/ProfileSettings/ProfileSettings.scss
+++ b/src/components/ProfileSettings/ProfileSettings.scss
@@ -58,8 +58,8 @@
           }
         }
 
-        .name,
-        .number {
+        .cardName,
+        .cardNumber {
           grid-column: 1 / 3;
         }
       }
