--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -1,4 +1,3 @@
-
 .label {
   width: 60%;
   padding: 0 0.4rem;
@@ -13,4 +12,12 @@
   height: 1.7rem;
   padding: 0 0.4rem;
   outline: none;
+}
+
+.error {
+  color: red;
+  font-size: 0.8rem;
+  text-align: left;
+  padding: 0 0.4rem;
+  width: 60%;
 }
